crates/tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_msg_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Not a `msg` field
  ┌─ compile_errors/invalid_msg_field.fe:4:9
  │
4 │     msg.foo
  │         ^^^
  │
  = Note: Only `sender`, `sig` and `value` can be accessed on `msg`.


